update quickstart / update workflow

--- a/demo/quickstart.ipynb
+++ b/demo/quickstart.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This first example will create and interact with datasets locally. For cloud object storage see [Using Cloud Object Storage](#using-cloud-object-storage).\n",
+    "This first example will create and interact with datasets locally. For cloud object storage see **Using Cloud Object Storage** section below.\n",
     "\n",
     "Let's first create a client which provide access to most of the commands we want."
    ]
